2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Added test for
	"Bug 434705 - No autocomplete offered if not assigning result of
	'new' to a variable".

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/TestParser.cs: Track error API.

2008-10-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharpBinding/TopLevelTests.cs: Added attribute parsing
	tests.

	* MonoDevelop.Projects/MSBuildTests.cs: Added test for merging of
	configuration properties.

2008-10-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: made attribute
	unit test a bit harder.

2008-10-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added some
	unit tests.

2008-10-16 Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Added unit test
	for 'Bug 434701 - No autocomplete in attributes'.

2008-10-16 Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: added unit test
	for 'Bug 434705 - No autocomplete offered if not assigning result of
	'new' to a variable'.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Don't start up the MD
	runtime for parser tests.

2008-10-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/ParsingTests.cs: Improve tests using new
	TestParser utility class.

	* Makefile.am:
	* UnitTests.mdp: Updated.

	* MonoDevelop.Xml.StateEngine/TestParser.cs: Utility for testing the XML
	parser.

2008-10-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added test for 'Bug
	434770 - No autocomplete on array types'.

2008-10-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: